--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
   font-family: Georgia, sans-serif;
   line-height: 1.5;
-  color: #785439;
+  color: #512200;
   background-color: #f0eee8;
 }
 
@@ -10,8 +10,32 @@ html {
   box-sizing: inherit;
 }
 
-h1 {
+h2 {
   font-family: 'Dosis', sans-serif;
+  color: #512200;
+}
+
+.link-card {
+  display: block;
+  border-width: 3px;
+  border-radius: 3px;
+  border-style: solid;
+  border-color: #9a816d;
+
+  background-color: #dcd4cd;
+  color: #512200;
+  text-decoration: none;
+
+  padding: .4em .75em .5em;
+}
+
+dl {
+  border-top: solid 2px #512200;
+  border-bottom: solid 2px #512200;
+}
+
+p {
+  border-bottom: 2px;
   color: #512200;
 }
 
@@ -22,8 +46,14 @@ h1 {
   border-width: 3px;
   color: #fff;
   background-color: #785439;
+  vertical-align: middle;
+}
+
+.link-card:hover .btn {
+  background-color: #512200;
+
 }
 
 a:hover {
-  background-color: #512200;
+  background-color: #cabdb2;
 }
